Patch for HARMONY-1799 "[classlib][swing] JTextPane throws NPE after we set null font." BasicTextPaneUITest.java test is removed from exclude lists
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/trunk@489362 13f79535-47bb-0310-9956-ffa450edef68