@@ -67,9 +67,6 @@ public class BasicTextPaneUI extends BasicEditorPaneUI implements ViewFactory {
         }
 
         final Font f = pane.getFont();
-        if (f == null) {
-            return;
-        }
 
         final Style style = getDefaultStyle(e);
 
@@ -83,9 +80,16 @@ public class BasicTextPaneUI extends BasicEditorPaneUI implements ViewFactory {
 
 
     private void updateFontAttributes(final Style style, final Font f) {
-        style.addAttribute(StyleConstants.Italic, Boolean.valueOf(f.isItalic()));
-        style.addAttribute(StyleConstants.Bold, Boolean.valueOf(f.isBold()));
-        style.addAttribute(StyleConstants.FontFamily, f.getName());
-        style.addAttribute(StyleConstants.FontSize, new Integer(f.getSize()));
+        if (f == null){
+            style.removeAttribute(StyleConstants.Italic);
+            style.removeAttribute(StyleConstants.Bold);
+            style.removeAttribute(StyleConstants.FontFamily);
+            style.removeAttribute(StyleConstants.FontSize);
+        } else {
+            style.addAttribute(StyleConstants.Italic, Boolean.valueOf(f.isItalic()));
+            style.addAttribute(StyleConstants.Bold, Boolean.valueOf(f.isBold()));
+            style.addAttribute(StyleConstants.FontFamily, f.getName());
+            style.addAttribute(StyleConstants.FontSize, new Integer(f.getSize()));
+        }
     }
 }
